k8s/overlays/staging/server-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  template:
    spec:
      containers:
        - name: server
          resources:
            requests:
              cpu:    250m
              memory: 256Mi
            limits:
              cpu:    1000m
              memory: 1Gi
